--- a/index.html
+++ b/index.html
@@ -45,11 +45,7 @@
         </div>
         <!-- filter Card section -->
          <section id="filterCard" class="">
-            <div class="px-[388px] py-[111px] bg-white border-2 border-[#F1F2F4] rounded-[8px] mt-4  justify-center items-center text-center">
-                <img class="" src="./jobs.png" alt="">
-                <h3 class="font-semibold text-[#002C5C] text-2xl">No jobs available</h3>
-                <p class="text-[#64748B]">Check back soon for new job opportunities</p>
-            </div>
+
          </section>
         <!-- Available Jobs list -->
         <section>
@@ -58,12 +54,12 @@
                 <!-- items-1 -->
                 <div class="flex justify-between px-6 py-6 bg-white border-2 border-[#F1F2F4] rounded-[8px] mt-4">
                     <div>
-                        <h3 class="headTags font-semibold text-[18px] text-[#002C5C]">Mobile First Corp-1</h3>
+                        <h3 class="headTags font-semibold text-[18px] text-[#002C5C]">Mobile First Corp</h3>
                         <p class="subTags text-[#64748B]">React Native Developer</p>
-                        <div class="subInfoTags flex text-[#64748B] gap-2 text-[14px] mt-[15px]">
-                            <p>Remote •</p>
-                            <p>Full-time •</p>
-                            <p>$130,000 - $175,000</p>
+                        <div class="flex text-[#64748B] gap-2 text-[14px] mt-[15px]">
+                            <p class="subInfoTags">Remote •</p>
+                            <p class="fulltime">Full-time •</p>
+                            <p class="money">$130,000 - $175,000</p>
                         </div>
                         <div class="w-[113px]  items-center justify-center mt-[15px]">
                             <p class="notApplied font-medium text-[14px] text-[#002C5C] px-4 py-2 bg-[#EEF4FF] rounded-[4px] items-center">Not Applied</p>
@@ -75,76 +71,168 @@
                         </div>
                     </div>
                     <div>
-                        <button class="btn rounded-full px-2 py-2 text-[#64748B]"><i class="fa-regular fa-trash-can"></i></button>
+                        <button class="deleteBtn btn rounded-full px-2 py-2 text-[#64748B]"><i class="fa-regular fa-trash-can"></i></button>
                     </div>
                 </div>
                 <!-- items-2 -->
                 <div class="flex justify-between px-6 py-6 bg-white border-2 border-[#F1F2F4] rounded-[8px] mt-4">
                     <div>
-                        <h3 class="headTags font-semibold text-[18px] text-[#002C5C]">Mobile First Corp-2</h3>
-                        <p class="subTags text-[#64748B]">React Native Developer-2</p>
-                        <div class="subInfoTags flex text-[#64748B] gap-2 text-[14px] mt-[15px]">
-                            <p>Remote •</p>
-                            <p>Full-time •</p>
-                            <p>$130,000 - $175,000</p>
+                        <h3 class="headTags font-semibold text-[18px] text-[#002C5C]">WebFlow Agency</h3>
+                        <p class="subTags text-[#64748B]">Web Designer & Developer</p>
+                        <div class="flex text-[#64748B] gap-2 text-[14px] mt-[15px]">
+                            <p class="subInfoTags">Los Angeles, CA •</p>
+                            <p class="subInfoTags">Part-time •</p>
+                            <p class="subInfoTags">$80,000 - $120,000</p>
                         </div>
                         <div class="w-[113px]  items-center justify-center mt-[15px]">
                             <p class="notApplied font-medium text-[14px] text-[#002C5C] px-4 py-2 bg-[#EEF4FF] rounded-[4px] items-center">Not Applied</p>
                         </div>
-                        <p class="paragraph text-[14px] text-[#323B49] mt-2">Build cross-platform mobile applications using React Native. Work on products used by millions of users worldwide.-2</p>
+                        <p class="paragraph text-[14px] text-[#323B49] mt-2">Create stunning web experiences for high-profile clients. Must have portfolio and experience with modern web design trends.</p>
                         <div class="flex gap-2 mt-[20px]">
                             <button class="interviewBtn btn btn-soft btn-success text-[14px] font-bold">interview</button>
-                            <button class="btn btn-soft btn-error text-[14px] font-bold">Rejected</button>
+                            <button class="rejectedBtn btn btn-soft btn-error text-[14px] font-bold">Rejected</button>
                         </div>
                     </div>
                     <div>
-                        <button class="btn rounded-full px-2 py-2 text-[#64748B]"><i class="fa-regular fa-trash-can"></i></button>
+                        <button class="deleteBtn btn rounded-full px-2 py-2 text-[#64748B]"><i class="fa-regular fa-trash-can"></i></button>
                     </div>
                 </div>
                 <!-- items-3 -->
                 <div class="flex justify-between px-6 py-6 bg-white border-2 border-[#F1F2F4] rounded-[8px] mt-4">
                     <div>
-                        <h3 class="headTags font-semibold text-[18px] text-[#002C5C]">Mobile First Corp-3</h3>
-                        <p class="subTags text-[#64748B]">React Native Developer-3</p>
-                        <div class="subInfoTags flex text-[#64748B] gap-2 text-[14px] mt-[15px]">
-                            <p>Remote •</p>
-                            <p>Full-time •</p>
-                            <p>$130,000 - $175,000</p>
+                        <h3 class="headTags font-semibold text-[18px] text-[#002C5C]">DataViz Solutions</h3>
+                        <p class="subTags text-[#64748B]">Data Visualization Specialist</p>
+                        <div class="flex text-[#64748B] gap-2 text-[14px] mt-[15px]">
+                            <p class="subInfoTags">Boston, MA •</p>
+                            <p class="subInfoTags">Full-time •</p>
+                            <p class="subInfoTags">$125,000 - $165,000</p>
                         </div>
                         <div class="w-[113px]  items-center justify-center mt-[15px]">
                             <p class="notApplied font-medium text-[14px] text-[#002C5C] px-4 py-2 bg-[#EEF4FF] rounded-[4px] items-center">Not Applied</p>
                         </div>
-                        <p class="paragraph text-[14px] text-[#323B49] mt-2">Build cross-platform mobile applications using React Native. Work on products used by millions of users worldwide.-3</p>
+                        <p class="paragraph text-[14px] text-[#323B49] mt-2">Transform complex data into compelling visualizations. Required skills: D3.js, React, and strong analytical thinking.</p>
                         <div class="flex gap-2 mt-[20px]">
                             <button class="interviewBtn btn btn-soft btn-success text-[14px] font-bold">interview</button>
-                            <button class="btn btn-soft btn-error text-[14px] font-bold">Rejected</button>
+                            <button class="rejectedBtn btn btn-soft btn-error text-[14px] font-bold">Rejected</button>
                         </div>
                     </div>
                     <div>
-                        <button class="btn rounded-full px-2 py-2 text-[#64748B]"><i class="fa-regular fa-trash-can"></i></button>
+                        <button class="deleteBtn btn rounded-full px-2 py-2 text-[#64748B]"><i class="fa-regular fa-trash-can"></i></button>
                     </div>
                 </div>
                 <!-- items-4 -->
                 <div class="flex justify-between px-6 py-6 bg-white border-2 border-[#F1F2F4] rounded-[8px] mt-4">
                     <div>
-                        <h3 class="headTags font-semibold text-[18px] text-[#002C5C]">Mobile First Corp-4</h3>
-                        <p class="subTags text-[#64748B]">React Native Developer-4</p>
-                        <div class="subInfoTags flex text-[#64748B] gap-2 text-[14px] mt-[15px]">
-                            <p>Remote •</p>
-                            <p>Full-time •</p>
-                            <p>$130,000 - $175,000</p>
+                        <h3 class="headTags font-semibold text-[18px] text-[#002C5C]">CloudFirst Inc</h3>
+                        <p class="subTags text-[#64748B]">Backend Developer</p>
+                        <div class="flex text-[#64748B] gap-2 text-[14px] mt-[15px]">
+                            <p class="subInfoTags">Seattle, WA •</p>
+                            <p class="subInfoTags">Full-time •</p>
+                            <p class="subInfoTags">$140,000 - $190,000</p>
                         </div>
                         <div class="w-[113px]  items-center justify-center mt-[15px]">
                             <p class="notApplied font-medium text-[14px] text-[#002C5C] px-4 py-2 bg-[#EEF4FF] rounded-[4px] items-center">Not Applied</p>
                         </div>
-                        <p class="paragraph text-[14px] text-[#323B49] mt-2">Build cross-platform mobile applications using React Native. Work on products used by millions of users worldwide.-4</p>
+                        <p class="paragraph text-[14px] text-[#323B49] mt-2">Design and maintain scalable backend systems using Python and AWS. Work with modern DevOps practices and cloud infrastructure.</p>
                         <div class="flex gap-2 mt-[20px]">
                             <button class="interviewBtn btn btn-soft btn-success text-[14px] font-bold">interview</button>
-                            <button class="btn btn-soft btn-error text-[14px] font-bold">Rejected</button>
+                            <button class="rejectedBtn btn btn-soft btn-error text-[14px] font-bold">Rejected</button>
                         </div>
                     </div>
                     <div>
-                        <button class="btn rounded-full px-2 py-2 text-[#64748B]"><i class="fa-regular fa-trash-can"></i></button>
+                        <button class="deleteBtn btn rounded-full px-2 py-2 text-[#64748B]"><i class="fa-regular fa-trash-can"></i></button>
+                    </div>
+                </div>
+                <!-- items-5 -->
+                <div class="flex justify-between px-6 py-6 bg-white border-2 border-[#F1F2F4] rounded-[8px] mt-4">
+                    <div>
+                        <h3 class="headTags font-semibold text-[18px] text-[#002C5C]">Innovation Labs</h3>
+                        <p class="subTags text-[#64748B]">UI/UX Engineer</p>
+                        <div class="flex text-[#64748B] gap-2 text-[14px] mt-[15px]">
+                            <p class="subInfoTags">Austin, TX •</p>
+                            <p class="subInfoTags">Full-time •</p>
+                            <p class="subInfoTags">$110,000 - $150,000</p>
+                        </div>
+                        <div class="w-[113px]  items-center justify-center mt-[15px]">
+                            <p class="notApplied font-medium text-[14px] text-[#002C5C] px-4 py-2 bg-[#EEF4FF] rounded-[4px] items-center">Not Applied</p>
+                        </div>
+                        <p class="paragraph text-[14px] text-[#323B49] mt-2">Create beautiful and functional user interfaces for our suite of products. Strong design skills and frontend development expertise required.</p>
+                        <div class="flex gap-2 mt-[20px]">
+                            <button class="interviewBtn btn btn-soft btn-success text-[14px] font-bold">interview</button>
+                            <button class="rejectedBtn btn btn-soft btn-error text-[14px] font-bold">Rejected</button>
+                        </div>
+                    </div>
+                    <div>
+                        <button class="deleteBtn btn rounded-full px-2 py-2 text-[#64748B]"><i class="fa-regular fa-trash-can"></i></button>
+                    </div>
+                </div>
+                <!-- items-6 -->
+                <div class="flex justify-between px-6 py-6 bg-white border-2 border-[#F1F2F4] rounded-[8px] mt-4">
+                    <div>
+                        <h3 class="headTags font-semibold text-[18px] text-[#002C5C]">MegaCorp Solutions</h3>
+                        <p class="subTags text-[#64748B]">JavaScript Developer</p>
+                        <div class="flex text-[#64748B] gap-2 text-[14px] mt-[15px]">
+                            <p class="subInfoTags">New York, NY •</p>
+                            <p class="subInfoTags">Full-time •</p>
+                            <p class="subInfoTags">$130,000 - $170,00</p>
+                        </div>
+                        <div class="w-[113px]  items-center justify-center mt-[15px]">
+                            <p class="notApplied font-medium text-[14px] text-[#002C5C] px-4 py-2 bg-[#EEF4FF] rounded-[4px] items-center">Not Applied</p>
+                        </div>
+                        <p class="paragraph text-[14px] text-[#323B49] mt-2">Build enterprise applications with JavaScript and modern frameworks. We offer competitive compensation, health insurance, and professional development opportunities.</p>
+                        <div class="flex gap-2 mt-[20px]">
+                            <button class="interviewBtn btn btn-soft btn-success text-[14px] font-bold">interview</button>
+                            <button class="rejectedBtn btn btn-soft btn-error text-[14px] font-bold">Rejected</button>
+                        </div>
+                    </div>
+                    <div>
+                        <button class="deleteBtn btn rounded-full px-2 py-2 text-[#64748B]"><i class="fa-regular fa-trash-can"></i></button>
+                    </div>
+                </div>
+                <!-- items-7 -->
+                <div class="flex justify-between px-6 py-6 bg-white border-2 border-[#F1F2F4] rounded-[8px] mt-4">
+                    <div>
+                        <h3 class="headTags font-semibold text-[18px] text-[#002C5C]">StartupXYZ</h3>
+                        <p class="subTags text-[#64748B]">Full Stack Engineer</p>
+                        <div class="flex text-[#64748B] gap-2 text-[14px] mt-[15px]">
+                            <p class="subInfoTags">Remote •</p>
+                            <p class="subInfoTags">Full-time •</p>
+                            <p class="subInfoTags">$120,000 - $160,000</p>
+                        </div>
+                        <div class="w-[113px]  items-center justify-center mt-[15px]">
+                            <p class="notApplied font-medium text-[14px] text-[#002C5C] px-4 py-2 bg-[#EEF4FF] rounded-[4px] items-center">Not Applied</p>
+                        </div>
+                        <p class="paragraph text-[14px] text-[#323B49] mt-2">Join our fast-growing startup and work on our core platform. Experience with Node.js and React required. Great benefits and equity package included.</p>
+                        <div class="flex gap-2 mt-[20px]">
+                            <button class="interviewBtn btn btn-soft btn-success text-[14px] font-bold">interview</button>
+                            <button class="rejectedBtn btn btn-soft btn-error text-[14px] font-bold">Rejected</button>
+                        </div>
+                    </div>
+                    <div>
+                        <button class="deleteBtn btn rounded-full px-2 py-2 text-[#64748B]"><i class="fa-regular fa-trash-can"></i></button>
+                    </div>
+                </div>
+                <!-- items-8 -->
+                <div class="flex justify-between px-6 py-6 bg-white border-2 border-[#F1F2F4] rounded-[8px] mt-4">
+                    <div>
+                        <h3 class="headTags font-semibold text-[18px] text-[#002C5C]">TechCorp Industries</h3>
+                        <p class="subTags text-[#64748B]">Senior Frontend Developer</p>
+                        <div class="flex text-[#64748B] gap-2 text-[14px] mt-[15px]">
+                            <p class="subInfoTags">San Francisco, CA •</p>
+                            <p class="subInfoTags">Full-time •</p>
+                            <p class="subInfoTags">$130,000 - $175,000</p>
+                        </div>
+                        <div class="w-[113px]  items-center justify-center mt-[15px]">
+                            <p class="notApplied font-medium text-[14px] text-[#002C5C] px-4 py-2 bg-[#EEF4FF] rounded-[4px] items-center">Not Applied</p>
+                        </div>
+                        <p class="paragraph text-[14px] text-[#323B49] mt-2">We are looking for an experienced Frontend Developer to build scalable web applications using React and TypeScript. You will work with a talented team on cutting-edge projects.</p>
+                        <div class="flex gap-2 mt-[20px]">
+                            <button class="interviewBtn btn btn-soft btn-success text-[14px] font-bold">interview</button>
+                            <button class="rejectedBtn btn btn-soft btn-error text-[14px] font-bold">Rejected</button>
+                        </div>
+                    </div>
+                    <div>
+                        <button class="deleteBtn btn rounded-full px-2 py-2 text-[#64748B]"><i class="fa-regular fa-trash-can"></i></button>
                     </div>
                 </div>
             </div>
